<!-- Tips -->
<!-- ('), (n) 등을 넣을 경우 \' \n 을 추가한다. -->


<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="question_australia">캔버라는 호주의 수도다</string>
    <string name="question_oceans">태평양은 대서양보다 더 크다</string>
    <string name="question_mideast">수에즈 운하는 홍해와 인도양을 연결한다.</string>
    <string name="question_africa">나일강은 이집트에서 시작된다.</string>
    <string name="question_americas">아마존강은 아메리카 대륙에서 가장 긴 강이다.</string>
    <string name="question_asia">바이칼 호수는 세계에서 가장 오래되고 가장 깊은 담수호다.</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="previous_button">Previous</string>
    <string name="next_button">Next</string>
    <string name="correct_toast">정답!</string>
    <string name="incorrect_toast">틀렸음!</string>
    <string name="done_toast">이미 결과가 입력된 문제입니다.</string>
    <string name="previous_help">이전 문제</string>
    <string name="next_help">다음 문제</string>
    <string name="warning_text">힌트를 보시겠습니까?</string>
    <string name="show_answer_button">힌트 보기</string>
    <string name="cheat_button">힌트 열람</string>
    <string name="judgment_toast">ㅋㅋㅋㅋㅋㅋ</string>
</resources>