<!--
<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>-->

<!-- tools는 TextView 위젯의 속성을 오버라이드해 레이아웃 디자인에 해당 문자열 리소스를 보여준다. -->
<!-- tools 네임스페이스 속성은 앱 실행시 위젯들이 화면에 나타날 때 무시된다. android:text는 런타임시에, tools:text는 디자인시 보기 위해 사용 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="24dp"
        tools:text="@string/question_australia"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/true_button"/>

        <Button
            android:id="@+id/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/false_button"/>

    </LinearLayout>

    <!--  리소스(이미지 파일)
    drawble-mdpi : 중밀도 화면 ( ~ 160dpi )
    drawble-hdpi : 고밀도 화면 ( ~ 240dpi )
    drawble-xhdpi : 초고밀도 화면 ( ~ 320dpi )
    drawble-xxhdpi : 극초고밀도 화면 ( ~ 480dpi )
    drawble-xxxhdpi : 궁극초고밀도 ( ~ 480dpi )
    이미지 선택은 안드로이드 운영체제가 적합한 이미지를 자동으로 선택한다.
    -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/previous_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_left"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/previous_help"/>

        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_right"
            android:contentDescription="@string/next_help"/>

    </LinearLayout>

</LinearLayout>

    <!--        <Button-->
    <!--            android:id="@+id/previous_button"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:drawableLeft="@drawable/arrow_left"-->
    <!--            android:drawablePadding="4dp"-->
    <!--            android:text="@string/previous_button"-->
    <!--            android:layout_marginRight="10dp"/>-->

    <!--    <Button-->
    <!--    android:id="@+id/next_button"-->
    <!--    android:layout_width="wrap_content"-->
    <!--    android:layout_height="wrap_content"-->
    <!--    android:text="@string/next_button"-->
    <!--    android:drawableEnd="@drawable/arrow_right"-->
    <!--    android:drawablePadding="4dp"/>-->